--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background: url(' background.jpg') no-repeat center center fixed;
+    background: url('src/background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
   }
