--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@ html, body {
   flex: 1;
   padding: 20px;
   color: white;
-  background: url('/background.jpeg') no-repeat center center fixed;
+  background: url('background.jpeg') no-repeat center center fixed;
   background-size: cover;
 }
